--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
         <div class="article-grid">
             <a href="#" class="back-home">Back to home</a>
 
-            <a href="article/bis.html" class="article-card">
+            <a href="/article/bis.html" class="article-card">
                 <h2 class="article-title">The Indian framework for Classifying standards.</h2>
                 <p class="article-description">How Beureau of Indian Srandards works!</p>
             </a>
-            <a href="article/comn-execution.html" class="article-card">
+            <a href="/article/comn-execution.html" class="article-card">
                 <h2 class="article-title">Comn is an execution strategy.</h2>
                 <p class="article-description">The philosophy behind my next project.</p>
             </a>
-            <a href="article/shameless-marketing.html" class="article-card">
+            <a href="/article/shameless-marketing.html" class="article-card">
                 <h2 class="article-title">Shameless Marketing</h2>
                 <p class="article-description">Ads are frustating, why do they exist?</p>
             </a>
