--- a/article/bis.html
+++ b/article/bis.html
@@ -163,7 +163,7 @@
     <script src="article-script.js"></script>
     <script src="toc.js"></script>
     <script src="img-viewer.js"></script>
-    <script src="/pageTransition.js"></script>
+    <script src="tempnghtl/pageTransition.js"></script>
 
 </body>
 </html>
