--- a/article/comn-execution.html
+++ b/article/comn-execution.html
@@ -59,7 +59,7 @@
 
     <script src="article-script.js"></script>
     <script src="img-viewer.js"></script>
-    <script src="/pageTransition.js"></script>
+    <script src="tempnghtl/pageTransition.js"></script>
 
 </body>
 </html>
