--- a/article/shameless-marketing.html
+++ b/article/shameless-marketing.html
@@ -86,7 +86,7 @@
 
     <script src="article-script.js"></script>
     <script src="toc.js"></script>
-    <script src="/pageTransition.js"></script>
+    <script src="tempnghtl/pageTransition.js"></script>
     <script src="img-viewer.js"></script>
 </body>
 </html>
